--- a/Web.config
+++ b/Web.config
@@ -46,6 +46,10 @@
     <add key="Umbraco.Core.VersionCheckPeriod" value="0" />
     <add key="UmbracoLicensesDirectory" value="~/App_Plugins/UmbracoLicenses/" />
     <add key="Umbraco.Core.DisableElectionForSingleServer" value="true" />
+    <add key="Umbraco.Cloud.Identity.ClientId" value="0297c0f6-83ad-4481-9ae2-07a3f5475333" />
+    <add key="Umbraco.Cloud.Identity.ClientSecret" value="Q5~T526ixOHlj47lg7Mu7_.zN1fK.7ua.9" />
+    <add key="Umbraco.Cloud.Identity.RedirectUri" value="https://redirect.identity.umbraco.com" />
+    <add key="Umbraco.Cloud.Identity.EnvironmentId" value="2d458434-cd97-41cb-87f9-7de5edd94b5c" />
   </appSettings>
   <!--
         Important: if you're upgrading Umbraco, do not clear the connectionString/providerName during your Web.config merge.
