--- a/Config/UmbracoDeploy.config
+++ b/Config/UmbracoDeploy.config
@@ -1,6 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<environments xmlns="urn:umbracodeploy-environments" id="00000000-0000-0000-0000-000000000000" name="" alias="" type="" color="">
-  <environment type="development" name="Development" id="00000000-0000-0000-0000-000000000000">http://development/</environment>
-  <environment type="staging" name="Staging" id="00000000-0000-0000-0000-000000000000">http://staging/</environment>
-  <environment type="live" name="Live" id="00000000-0000-0000-0000-000000000000">http://live/</environment>
+<environments xmlns="urn:umbracodeploy-environments" id="51bf3aea-0e20-42e2-ae36-fdf862671bcf" name="Ruis Resourceful Kitten" alias="ruis-resourceful-kitten" type="Starter" color="" url="https://www.s1.umbraco.io/project/ruis-resourceful-kitten" trialExpireDate="2021-03-17T12:52:11">
+  <environment type="live" name="Live" id="2d458434-cd97-41cb-87f9-7de5edd94b5c">https://ruis-resourceful-kitten.s1.umbraco.io</environment>
 </environments>
