--- a/Web.config
+++ b/Web.config
@@ -50,6 +50,7 @@
     <add key="Umbraco.Cloud.Identity.ClientSecret" value="Q5~T526ixOHlj47lg7Mu7_.zN1fK.7ua.9" />
     <add key="Umbraco.Cloud.Identity.RedirectUri" value="https://redirect.identity.umbraco.com" />
     <add key="Umbraco.Cloud.Identity.EnvironmentId" value="2d458434-cd97-41cb-87f9-7de5edd94b5c" />
+    <add key="Umbraco.Deploy.ApiKey" value="9C716AB1AE9A8A4F710799FBEAFA1380F68CD9A3" />
   </appSettings>
   <!--
         Important: if you're upgrading Umbraco, do not clear the connectionString/providerName during your Web.config merge.
