Adding package 'TestSwagName'

--- a/App_Data/packages/installedPackages.config
+++ b/App_Data/packages/installedPackages.config
@@ -8,12 +8,12 @@
 
 It contains a simple website that contains many basic features to help get you started including a home page, a blog, a product catalog, contact page and more.]]></readme>
     <actions></actions>
-    <datatypes>1051,1052,1053,1054,1055,1056,1057,1058,1059,1060,1061,1062,1063,1064,1065,1066,1067,1068,1069,1070,1071</datatypes>
-    <content nodeId="1095" loadChildNodes="false" />
-    <templates>1072,1073,1074,1075,1076,1077,1078,1079,1080,1081</templates>
+    <datatypes></datatypes>
+    <content nodeId="" loadChildNodes="false" />
+    <templates></templates>
     <stylesheets></stylesheets>
-    <documentTypes>1083,1084,1085,1086,1087,1088,1089,1090,1091,1092,1093,1094</documentTypes>
-    <macros>2,3</macros>
+    <documentTypes></documentTypes>
+    <macros></macros>
     <files>
       <file>Media\SK_Temp\7373036290_5e8420bf36_b.jpg</file>
       <file>Media\SK_Temp\14272036539_469ca21d5c_h.jpg</file>
