--- a/.well-known/cf-custom-hostname-challenge/web.config
+++ b/.well-known/cf-custom-hostname-challenge/web.config
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
   <configuration>
+    <appSettings>
+        <add key="umbracoReservedUrls" value="~/.well-known" />
+    </appSettings>
    <system.webServer>
      <staticContent>
          <mimeMap fileExtension="." mimeType="text/plain" />
