Adding  package 'Slimsy' along with 7 other items

--- a/App_Data/packages/installedPackages.config
+++ b/App_Data/packages/installedPackages.config
@@ -85,4 +85,27 @@ It contains a simple website that contains many basic features to help get you s
     <languages></languages>
     <dictionaryitems></dictionaryitems>
   </package>
+  <package id="2" version="3.0.0" url="https://github.com/Jeavon/Slimsy" name="Slimsy" packagePath="C:\home\site\wwwroot\App_Data\packages\dde845a4-3b81-47a5-9a01-7a60c5dc9aee.umb" iconUrl="https://raw.githubusercontent.com/Jeavon/Slimsy/master/Slimsy.png" umbVersion="8.6.0" packageGuid="dde845a4-3b81-47a5-9a01-7a60c5dc9aee" view="">
+    <license url="http://www.opensource.org/licenses/mit-license.php"><![CDATA[MIT license]]></license>
+    <author url="http://our.umbraco.org"><![CDATA[Jeavon Leopold, Marc Stöcker, William Phillips]]></author>
+    <contributors />
+    <readme><![CDATA[Please follow the instructions on the project page http://our.umbraco.org/projects/website-utilities/slimsy]]></readme>
+    <actions />
+    <datatypes></datatypes>
+    <content nodeId="" loadChildNodes="false" />
+    <templates></templates>
+    <stylesheets></stylesheets>
+    <documentTypes></documentTypes>
+    <macros></macros>
+    <files>
+      <file>App_Data\TEMP\Slimsy\views.web.config.install.xdt</file>
+      <file>App_Data\TEMP\Slimsy\views.web.config.uninstall.xdt</file>
+      <file>bin\Microsoft.Web.XmlTransform.dll</file>
+      <file>bin\Slimsy.dll</file>
+      <file>Scripts\lazysizes.min.js</file>
+      <file>Scripts\picturefill.min.js</file>
+    </files>
+    <languages></languages>
+    <dictionaryitems></dictionaryitems>
+  </package>
 </packages>
