--- a/Web.config
+++ b/Web.config
@@ -17,7 +17,7 @@
       <section name="caching" requirePermission="false" type="ImageProcessor.Web.Configuration.ImageCacheSection, ImageProcessor.Web" />
     </sectionGroup>
     <sectionGroup name="umbraco.deploy">
-      <section name="environments" type="Umbraco.Deploy.Configuration.DeployEnvironmentsConfiguration.DeployEnvironmentsSection, Umbraco.Deploy" requirePermission="false" />
+      <section name="environments" type="Umbraco.Deploy.Cloud.Configuration.DeployEnvironmentsConfiguration.DeployCloudEnvironmentsSection, Umbraco.Deploy.Cloud" requirePermission="false" />
       <section name="settings" type="Umbraco.Deploy.Configuration.DeployConfiguration.DeploySettingsSection, Umbraco.Deploy" requirePermission="false" />
     </sectionGroup>
   </configSections>
@@ -229,8 +229,8 @@
         <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Cors" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
+        <assemblyIdentity name="System.Web.Cors" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
